force-app/main/default/objects/Project__c/fields/DeletionFlag__c.field-meta.xml
<CustomField>
    <fullName>DeletionFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deletion Flag</label>
    <type>Checkbox</type>
</CustomField>