force-app/main/default/objects/Project__c/fields/fm_CompanyProjectCode__c.field-meta.xml
<CustomField>
    <fullName>fm_CompanyProjectCode__c</fullName>
    <formula>Opportunity__r.CompanyCode__c + &apos;|&apos; + ProjectCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Project Code</label>
    <type>Text</type>
</CustomField>