force-app/main/default/objects/Project__c/fields/ProjectCode__c.field-meta.xml
<CustomField>
    <fullName>ProjectCode__c</fullName>
    <externalId>true</externalId>
    <label>Project Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>