force-app/main/default/objects/Project__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <formula>IF(MID(ProjectCode__c, 7, 1) = &apos;9&apos;,&apos;Business Plan&apos;,
IF(MID(ProjectCode__c, 3, 1) = &apos;C&apos;,&apos;Execute Project&apos;,
IF(MID(ProjectCode__c, 3, 1) = &apos;A&apos;,&apos;Sales Project&apos;,&apos;Other Project&apos;)))</formula>
    <label>Project Type</label>
    <type>Text</type>
</CustomField>